--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <jersey.version>1.8</jersey.version>
         <apache-io.version>1.3.2</apache-io.version>
         <mimepull.version>1.9.4</mimepull.version>
+        <junit.version>4.11</junit.version>
         <broker-auth.version>1.0</broker-auth.version>
         <broker-db.version>1.0</broker-db.version>
         <broker-offer.version>1.0</broker-offer.version>
@@ -61,6 +62,13 @@
         </dependency>
 
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
             <version>${jersey.version}</version>
@@ -71,7 +79,7 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
             <version>${jersey.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
